@@ -23,7 +23,7 @@
 ^MYMETA\.yml$
 ^README\.md$
 ^README\.textile$
-^SIGNATURE$
+#^SIGNATURE$
 ^Debian_CPANTS.txt$
 ^nytprof/
 ^nytprof.out$
@@ -60,4 +60,5 @@ Thumbs.db
 \bipc_srlock
 
 # Avoid archives of this distribution
-\b[% distname %]-v?[\d\.\_]+
+#\b[% distname %]-v?[\d\.\_]+
+\b[% distname %]-?[\d\.\_]+
