@@ -1,28 +1,48 @@
-name             = [% distname %]
-abstract         = [% abstract %]
-author           = [% author %] <[% author_email %]>
-copyright_holder = [% copyright %]
-license          = [% license_class %]
-main_module      = [% dist_module %]
+; @(#)$Ident: dist.ini 2013-08-13 09:36 pjf ;
+
+name              = [% distname %]
+abstract          = [% abstract %]
+author            = [% author %] <[% author_email %]>
+copyright_holder  = [% copyright %]
+license           = [% license_class %]
+main_module       = [% dist_module %]
 
 [Prereqs]
-Class::Usul      = 0.22.0
-
-[Prereqs / RuntimeRecommends ]
-App::cpanminus   = 1.6005
+Class::Usul       = 0.22.0
 
 [Prereqs / ConfigureRequires ]
-version          = 0.88
-Module::Build    = 0.4004
+version           = 0.88
+Module::Build     = 0.4004
 
 [Prereqs / BuildRequires ]
-version          = 0.88
-Module::Build    = 0.4004
+version           = 0.88
+Module::Build     = 0.4004
+
+[Meta::Dynamic::Config]
+
+[MetaNoIndex]
+directory         = examples
+directory         = inc
+directory         = share
+directory         = t
+
+[MetaProvides::Package]
+meta_noindex      = 1
+
+[MetaResources]
+license           = http://dev.perl.org/licenses/
+homepage          = https://metacpan.org/author/[% author_ID %]
+bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=[% distname %]
+bugtracker.mailto = bug-[% distname %]@rt.cpan.org
+;repository.url   = git://github.com/[% author_id %]/[% distname_lc %].git
+;repository.web   = http://github.com/[% author_id %]/[% distname_lc %]
+;repository.type  = git
 
 ; So apparently order matters
+[Signature]
 [GatherDir]
 [VersionFromModule]
-[ModuleBuild]
+[ModuleBuild::Custom]
 [License]
 [ManifestSkip]
 [ReadmeAnyFromPod]
@@ -37,3 +57,4 @@ Module::Build    = 0.4004
 ; tab-title: [% project %]
 ; tab-width: 3
 ; End:
+; vim: expandtab shiftwidth=3:
