@@ -1,6 +1,7 @@
 Revision history for Module::Provision
 
 0.18.4    2013-08-10 22:17:28
+          - Updated share/dist.ini. Added share/DZ_Build.PL
           - Stopping testing on windows until RT#87575 is fixed
             febd397b-6bf5-1014-b508-69147d50f5d1
           - Toolchain update. Attempt to filter out residual noise
